[update]:改造jdk1.8+千意通问使用